로그인 (최종본 js제외)

--- a/login_ page/login.html
+++ b/login_ page/login.html
@@ -27,5 +27,14 @@
             <input type="submit" value="Sign in" class="Sign_in_btn" >
         </form>
     </div>
+    <p class="elucidation">New to DevelopHub? <a href="/Sign_up_page/Sign_up.html" class="font_color">Create an account</a></p>
+    <div class="tag_box">
+        <ul>
+            <li><a href="/login_ page/login.html">Terms</a></li>
+            <li><a href="/login_ page/login.html">Privacy</a></li>
+            <li><a href="/login_ page/login.html">Security</a></li>
+            <li><span>Contact DevelopHub</span></li>
+        </ul>
+    </div>
 </body>
 </html>
