--- a/email_check/email_check.html
+++ b/email_check/email_check.html
@@ -20,17 +20,47 @@
         <form class="email_check_box" >
             <label for="email_check">Send an email.</label>
             <div class="input-container">
-                <input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input2')" id="input1">
-                <input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input3')" id="input2" onkeyup="moveBack(this,'input1')">
-                <input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input4')" id="input3" onkeyup="moveBack(this,'input2')">
-                <input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input5')" id="input4" onkeyup="moveBack(this,'input3')">
-                <input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input6')" id="input5" onkeyup="moveBack(this,'input4')">
-                <input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " id="input6" onkeyup="moveBack(this,'input5')">          
+
+
+
+
+
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); moveNext(this,'input2')" onkeydown="if(event.keyCode === 8) moveBack(this, 'input1')" id="input1"> 
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); moveNext(this, 'input3'); moveBack(this,'input1')" onkeydown="if(event.keyCode === 8) moveBack(this, 'input2')" id="input2" />
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); moveNext(this,'input4');  moveBack(this,'input2')" onkeydown="if(event.keyCode === 8) moveBack(this, 'input3')" id="input3">
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); moveNext(this,'input5');  moveBack(this,'input3')" onkeydown="if(event.keyCode === 8) moveBack(this, 'input4')" id="input4">
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); moveNext(this,'input6'); moveBack(this,'input4')" onkeydown="if(event.keyCode === 8) moveBack(this, 'input5')" id="input5">
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); moveBack(this,'input5');moveBack(this,'input5')" onkeydown="if(event.keyCode === 8) moveBack(this, 'input6')" id="input6">
+
             </div>
             <input type="submit" value="Verification" class="email_check_btn" >
         </form>
     </div>
     <p class="elucidation">Hasn't the email been sent? <a href="/email_check/email_check.html" class="font_color">Resend email.</a></p>
 </body>
-<script src="/email_check/email_check.js"></script>
+<script>
+    function moveNext(input, nextInputID) {
+  if (input.value.length == input.maxLength) {
+    document.getElementById(nextInputID).focus();
+  }
+}
+
+function moveBack(input, backInputID) {
+  if (input.value.length === 0 || !input.value || event.keyCode === 8) {
+    document.getElementById(backInputID).focus();
+  }
+}
+
+</script>
 </html>
+
+
+<!--<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input2')" id="input1">
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input3')" id="input2" onkeyup="moveBack(this,'input1')"> 여기서 onkeyup 키보드에서 키를 누를때 발생하는 이벤트
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input4')" id="input3" onkeyup="moveBack(this,'input2')"> 이므로 키를 누를때 땔대 동시에 이벤트가 발생하기 때문에 
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input5')" id="input4" onkeyup="moveBack(this,'input3')"> moveNext,moveBack 함수가 동시에 호출되어서 잘 
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " onkeyup="moveNext(this,'input6')" id="input5" onkeyup="moveBack(this,'input4')">
+<input type="text" maxlength="1" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1'); " id="input6" onkeyup="moveBack(this,'input5')">          
+
+
+-->  
