--- a/Sign_up_page/Sign_up.html
+++ b/Sign_up_page/Sign_up.html
@@ -17,8 +17,8 @@
     <img src="/Sign_up_page/logo.png" class="logo_img">
     <h1 class="title">Sign up DevelopHub</h1>
     <div class="container">
-        <form class="sian_up_box" method="post">
-            <label for="username">Username</label>
+        <form class="sian_up_box" method="post"> 
+            <label for="username">Username</label> <!---->
             <br><input type="text" id="username" name="username" placeholder="Enter Username" class="color"><br>
 
             <label for="email">Email</label>
