유효성 검사 기능 추가중

--- a/Sign_up_page/Sign_up.html
+++ b/Sign_up_page/Sign_up.html
@@ -27,8 +27,9 @@
             <label for="password">Password</label>
             <br><input type="password" id="Password" name="password" placeholder="Enter Password" class="color"><br>
 
-            <input type="submit" value="Sign  up" class="Sign_up_btn" >
+            <input type="submit" value="Sign  up" class="Sign_up_btn" id="sign_up_btn" null_check() >
         </form>
     </div>
+    <script src="/Sign_up_page/Sign_up.js"></script>
 </body>
 </html>
