your Questions, your Answer 페이지 만드는 중

--- a/your_Question_page/your_Question_page.html
+++ b/your_Question_page/your_Question_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Question page/Question_page.css">
+    <link rel="stylesheet" href="/your_Question_page/your_Question_page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap" rel="stylesheet">
@@ -32,9 +32,12 @@
             </nav>
         </header>
         <section>
-            <div class="main_btn">
-                <p class="All_Questions_font">All Questions</p>
-                <button class="Ask_Question_btn">Ask Question</button>
+            <div class="main_Top">
+                <ul>
+                    <li><a class="your_UserName">Kim</a></li>
+                    <li><a class="Question_move">your Question</a></li>
+                    <li><a class="Answer_move">your Answer</a></li>
+                </ul>
             </div>
         </section>
     </main>
