--- a/Sign_up_page/tsst1.html
+++ b/Sign_up_page/tsst1.html
@@ -15,19 +15,33 @@
 
 		/* 드롭다운 메뉴 스타일링 */
 		.dropdown-content {
-		  display: none;
-		  position: absolute;
-		  background-color: #f1f1f1;
-		  min-width: 160px;
-		  box-shadow: 0px 8px 16px 0px rgba(0,0,0)
+		  display: none; /* display를 none으로 준 이유는 나중에 드랍다운 할때 show를 블럭으로 줘서 추가할려고 하기 때문이다           */
+		  position: relative;
+		  background-color: #ffffff;
+		  width: 175px;
+      	height: 135px;
+		border-radius: 15px;
         }
+		.dropdown-content:after{
+			display: block;
+			position: absolute;
+			border-bottom: 10px solid darkblue ;
+			border-left: 10px solid  transparent;
+			border-right: 10px solid  transparent;
+			border-top: 0px solid  transparent;
+			content: "";
+			top: -10px;
+		}
 
         .dropdown-content a {
 	  color: black;
-	  padding: 12px 16px;
+	  padding: 20px 72px 10px 19px;
 	  text-decoration: none;
 	  display: block;
-	  border-bottom: 1px solid #ddd;
+	  font-size: 12px;
+	  font-weight: 400;
+	  line-height: 16.34px;
+	  background-color: rgb(150, 177, 177);
 	}
 
 
@@ -36,16 +50,15 @@
   .show {
   display: block;
 }
-
 .ex{
-  margin-top: 45px;
+	border-top: 2px solid darkorchid;
 }
 .ex1{
   border-radius: 15px;
+border-radius: 9px;
+border: 1px solid #7c2020;
 width: 137px;
 height: 24px;
-border-radius: 9px;
-border: 1px solid #EBEBEB;
 }
 
 	/* 드롭다운 메뉴 표시 스타일링 */
@@ -55,9 +68,9 @@ border: 1px solid #EBEBEB;
 	<div class="dropdown">
 	  <button class="dropbtn">Dropdown</button>
 	  <div class="dropdown-content">
-	    <a href="#">링크 1</a>
-	    <a href="#">링크 2</a>
-      <a href="#" class="ex"><button class="ex1">링크 3</button></a>
+    <a href="#">your Question</a>
+	    <a href="#">your Answer</a>
+      <a href="#" class="ex"><button class="ex1">sign out</button></a>
 	  </div>
 	</div>
     <script>
