--- a/Question page/Question_page.html
+++ b/Question page/Question_page.html
@@ -21,32 +21,22 @@
                     </div>
                     <div class="header_right">
                         <li><a href="/Question page/Question_page.html" class="mini_font">Questions</a></li>
-                        <li><button class="menu_btn">kim</button></li>    
                     </div>
-                    <div class="dropdown-content">
-                        <a href="#" class="dropdown_content_Question">your Question</a>
-                        <a href="#" class="dropdown_content_Answer">your Answer</a>
-                        <a href="#" class="dropdown_content_sign-out"><button class="sign_btn">sign out</button></a>
+                    <div class="drodown">
+                        <button class="dropdown_btn" onclick="dp_menu()">kim</button>
+                        <div id="dropdown-content">
+                            <a href="#" class="dropdown_content_Question">your Question</a>
+                            <a href="#" class="dropdown_content_Answer">your Answer</a>
+                            <a href="#" class="dropdown_content_sign-out"><button class="sign_btn">sign out</button></a>
+                        </div>    
                     </div>
                 </ul>
             </nav>
         </header>
     </main>
 </body>
+<script src="/Question page/Question_page.js"></script>
 </html>
-
-
-
-
-
-
-<section>
-    <div class="main_btn">
-        <p class="All_Questions_font">All Questions</p>
-        <button class="Ask_Question_btn">Ask Question</button>
-    </div>
-    </section>
-
 
 
 
