--- a/Question page/Question_page.html
+++ b/Question page/Question_page.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap" rel="stylesheet">
+    <script src="/FrontDevelopHub/Question page/Question_page.js"></script>
     <title>Question page</title>
 </head>
 <body>
@@ -23,16 +24,22 @@
                         <li><a href="/Question page/Question_page.html" class="mini_font">Questions</a></li>
                     </div>
                     <div class="drodown">
-                        <button class="dropdown_btn" onclick="dp_menu()">kim</button>
-                        <div id="dropdown-content">
-                            <a href="#" class="dropdown_content_Question">your Question</a>
-                            <a href="#" class="dropdown_content_Answer">your Answer</a>
-                            <a href="#" class="dropdown_content_sign-out"><button class="sign_btn">sign out</button></a>
                         </div>    
                     </div>
                 </ul>
             </nav>
         </header>
+    </main>
+    <main>
+        <section>
+            <div id="All-Que">
+                <span id="tatle-font">All Question</span>
+                <button id="Ask-btn">Ask Question</button>
+            </div>
+            <div id="main-content-tool">
+                
+            </div>
+        </section>
     </main>
 </body>
 <script src="/Question page/Question_page.js"></script>
