--- a/login_ page/login.html
+++ b/login_ page/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/login_ page/login.css">
+    <link rel="stylesheet" href="/login_ page/develophub-login.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
@@ -28,5 +29,6 @@
         </form>
     </div>
     <p class="elucidation">New to DevelopHub? <a href="/Sign_up_page/Sign_up.html" class="font_color">Create an account</a></p>
+
 </body>
 </html>
